Spacing fix

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -267,7 +267,7 @@ footer {
     color: #701F41;
     font-weight: bold;
     text-align: left;
-    margin-left: 12em
+    margin-left: 15em
 }
 
 .aboutSection {
